src/objects/RelatedCaseAccounts__c.object
<CustomObject>
    <description>SFDC1-675
Required to add additional details to the processing additional fields record type.</description>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>SFDC1-675.
Account type of looked up account.</description>
        <formula>Text( Account__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-675
Lookup to accounts.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Case Accounts</relationshipLabel>
        <relationshipName>RelatedCaseAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalField__c</fullName>
        <description>SFDC1-675
Master-Detail with the additional fields object.</description>
        <label>Additional Field</label>
        <referenceTo>AdditionalCaseFields__c</referenceTo>
        <relationshipLabel>Related Case Accounts</relationshipLabel>
        <relationshipName>RelatedCaseAccounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PKIDRelCaseAcct__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>RCA{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID RelCaseAcct</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ParentAccount__c</fullName>
        <description>SFDC1-675.
Parent account of account lookup.</description>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedRole__c</fullName>
        <description>SFDC1-675
Role related to the account.</description>
        <label>Related Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central Counterparty Clearing House</fullName>
                </value>
                <value>
                    <fullName>Clearing Broker</fullName>
                </value>
                <value>
                    <fullName>Executing Broker</fullName>
                </value>
                <value>
                    <fullName>Fund Administrator</fullName>
                </value>
                <value>
                    <fullName>Prime Broker</fullName>
                </value>
                <value>
                    <fullName>SEF - Execution Facility</fullName>
                </value>
                <value>
                    <fullName>STP Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Case Accounts</label>
    <nameField>
        <displayFormat>RCA-{000000}</displayFormat>
        <label>Related Case Accounts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Case Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>